# RayTracing

./: CMakeLists.txt  Factorybox.h  Figure.h  Header.h  Ray.cpp  Ray.h  RayTracing.cpp  Scan.cpp  Source.cpp  box.cpp  box.h  data.txt  databox.txt
